# ops-quagga

./: DESIGN.md  configure.ac
bgpd/: Makefile.am  bgp_attr.c  bgp_attr.h  bgp_backend_functions.c  bgp_backend_functions.h  bgp_clist.c  bgp_clist.h  bgp_debug.c  bgp_debug.h  bgp_filter.c  bgp_filter.h  bgp_fsm.c  bgp_main.c  bgp_mpath.c  bgp_network.c  bgp_ovsdb_if.c  bgp_ovsdb_if.h  bgp_ovsdb_route.c  bgp_ovsdb_route.h  bgp_packet.c  bgp_route.c  bgp_route.h  bgp_zebra.c  bgpd.c  bgpd.h
lib/: Makefile.am  command.c  log.c  log.h  plist.c  plist.h  policy_ovsdb.c  policy_ovsdb.h  routemap.c  routemap.h  table.h  zclient.c
ops-tests/component/: bgp_config.py  helpers_routing.py  setup_basic_bgp_with_peer.py  test_bgp_ct_active_router_id.py  test_bgp_ct_maximum_paths.py  test_bgp_ct_network_cfg.py  test_bgp_ct_routemap.py  test_bgp_ct_routemap_match_commit.py  test_bgp_ct_routemap_set_commit.py  test_bgp_ct_router_bgp.py  test_bgp_ct_router_id.py  test_bgp_ct_show_bgp_neighbors.py  test_bgp_ct_show_ip_bgp.py  test_bgp_ct_show_running_config.py  test_bgp_ct_timers.py
ops-tests/component/ospf/: test_ospfv2_ct_verify_tcpport_closed.py
ops-tests/component/zebra/: route_generator_and_stats_reporter.py  test_zebra_ct_active_router_id.py  test_zebra_ct_cli_ipv4_static_routes.py  test_zebra_ct_cli_ipv6_static_routes.py  test_zebra_ct_cli_sorted_display.py  test_zebra_ct_connected_routes.py  test_zebra_ct_diagnostics.py  test_zebra_ct_ecmp.py  test_zebra_ct_fib_selection.py  test_zebra_ct_interface_state_change.py  test_zebra_ct_ipv4_scale_tests.py  test_zebra_ct_ipv4_static_bgp_nexthop_selection.py  test_zebra_ct_ipv6_scale_tests.py  test_zebra_ct_no_routing_trigger.py  test_zebra_ct_restartability.py  test_zebra_ct_route_nexthop_delete.py  test_zebra_ct_verify_tcpport_closed.py
ops-tests/feature/bgp/: bgp_config.py  interface_utils.py  test_bgp_ft_basic_bgp_route_advertise.py  test_bgp_ft_filter_list.py  test_bgp_ft_ip_community_list.py  test_bgp_ft_ip_extcommunity_list.py  test_bgp_ft_ipv6_prefixlist.py  test_bgp_ft_neighbor_password.py  test_bgp_ft_neighbor_remove_private_as.py  test_bgp_ft_no_neighbor.py  test_bgp_ft_peergroup.py  test_bgp_ft_prefix_list.py  test_bgp_ft_redistribute.py  test_bgp_ft_routemap.py  test_bgp_ft_routemap_aspath.py  test_bgp_ft_routemap_atomic_aggregate.py  test_bgp_ft_routemap_ipv6_next_hop.py  test_bgp_ft_routemap_metric.py  test_bgp_ft_routemap_metric_clear_all_in.py  test_bgp_ft_routemap_metric_clear_all_out.py  test_bgp_ft_routemap_metric_clear_as_in.py  test_bgp_ft_routemap_metric_clear_as_out.py  test_bgp_ft_routemap_metric_clear_peer_group_in.py  test_bgp_ft_routemap_metric_clear_peer_group_out.py  test_bgp_ft_routemap_metric_clear_peer_in.py  test_bgp_ft_routemap_metric_clear_peer_out.py  test_bgp_ft_routemap_origin.py  test_bgp_ft_routemap_probability.py  test_bgp_ft_routemap_set_commlist.py  test_bgp_ft_routemap_weight.py  test_bgp_ft_routemaps_with_hosts_ping.py  vtysh_utils.py
ops-tests/feature/ospf/: ospf_configs.py  test_ospfv2_ft_abr.py  test_ospfv2_ft_authentication.py  test_ospfv2_ft_best_route.py  test_ospfv2_ft_dr_bdr_election.py  test_ospfv2_ft_ospf_disabled.py  test_ospfv2_ft_redistribution.py  test_ospfv2_ft_stub.py  test_ospfv2_ft_tmr_adjacency.py  test_ospfv2_ft_virtual_links.py
ops-tests/feature/zebra/: layer3_common.py  test_zebra_ft_ecmp_routing.py  test_zebra_ft_static_routes.py
ops/docs/: AUTHORS  README.md
ops/opsplugins/: bgp_router.py  ospf_router.py
ops/tests/: IpKernelRouteShow.py  quagga_test.md  setup_basic_bgp_with_peer.py  test_bgp_ct_maximum_paths.py  test_bgp_ct_network_cfg.py  test_bgp_ct_routemap.py  test_bgp_ct_routemap_match_commit.py  test_bgp_ct_routemap_set_commit.py  test_bgp_ct_router_bgp.py  test_bgp_ct_router_id.py  test_bgp_ct_show_bgp_neighbors.py  test_bgp_ct_show_ip_bgp.py  test_bgp_ct_show_running_config.py  test_bgp_ct_timers.py  test_zebra_ct_cli_l3routes.py  test_zebra_ct_ecmp.py  test_zebra_ct_fib_selection.py  test_zebra_ct_interface_state_change.py  test_zebra_ct_ipv4_static_bgp_nexthop_selection.py  test_zebra_ct_no_routing_trigger.py  test_zebra_ct_restartability.py  test_zebra_ct_route_nexthop_delete.py
ospfd/: Makefile.am  ospf_asbr.c  ospf_ase.c  ospf_dump.c  ospf_dump.h  ospf_interface.c  ospf_ism.c  ospf_lsa.c  ospf_main.c  ospf_neighbor.c  ospf_nsm.c  ospf_ovsdb_if.c  ospf_ovsdb_if.h  ospf_packet.c  ospf_route.c  ospf_spf.c  ospf_zebra.c  ospf_zebra.h  ospfd.c  ospfd.h
vtysh/: vtysh_main.c
zebra/: DESIGN.md  Makefile.am  README.md  main.c  rib.h  rt_netlink.c  zebra_diagnostics.c  zebra_diagnostics.h  zebra_ovsdb_if.c  zebra_ovsdb_if.h  zebra_rib.c  zebra_vty.c  zserv.c  zserv.h
zebra/cli/: Makefile.am  l3routes_vty.c  l3routes_vty.h  vtysh_ovsdb_l3routes_context.c  vtysh_ovsdb_l3routes_context.h
